# AI-Model

./: AI_Streamer.py  StreamerClient.py  pyproject.toml  telegram_scrapper.py  websocket_client.html
fine-tuning/: csv_tune-script.py  dialog.json  dialog_data_prepare.py  dialog_tune_script.py  sample_comments.csv  toxic_training_data.json  tune_script.py
fine-tuning/csv_style_model/runs/Jul21_22-06-33_DESKTOP-U81MKM8/: events.out.tfevents.1753124798.DESKTOP-U81MKM8.24156.0
fine-tuning/csv_style_model/runs/Jul21_22-36-55_DESKTOP-U81MKM8/: events.out.tfevents.1753126616.DESKTOP-U81MKM8.26656.0
streaming/: AI_Streamer.py  StreamerClient.py  websocket_client.html
