[tool.poetry]
name = "ai-model"
version = "0.1.0"
description = ""
authors = ["Alexeev Eduard <47676479+MR-d3R@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.4"
torch = "^2.7.1"
numpy = { version = "^1.22.0", python = ">=3.10,<4.0" }
tts = { version = "^0.22.0", python = ">=3.10,<3.12" }
openai-whisper = "^20250625"
llama-cpp-python = "^0.3.12"
accelerate = "^1.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
