[tool.poetry]
name = "ai-model"
version = "0.1.0"
description = ""
authors = ["Alexeev Eduard <47676479+MR-d3R@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.4"
torch = "^2.5.1"
torchvision = "^0.20.1"
torchaudio = "^2.5.1"
coqui-tts = { version = "^0.27.0", python = ">=3.10,<3.13" }
numpy = { version = "^1.22.0", python = ">=3.10,<4.0" }
openai-whisper = "^20250625"
llama-cpp-python = "^0.3.12"
accelerate = "^1.8.1"
pyaudio = "^0.2.14"
aiohttp = "^3.12.14"
python-decouple = "^3.8"
loguru = "^0.7.3"
telethon = "^1.40.0"
transformers = "^4.53.2"
peft = "^0.16.0"
datasets = "^4.0.0"
sentencepiece = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
